// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end to end: election can be uploaded, voter can vote and print 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
}

.c3 {
  width: 100%;
  max-width: 35rem;
  margin: auto auto;
  padding: 1rem;
}

.c4 {
  line-height: 1.2;
  max-width: 66ch;
  text-align: center;
  margin: auto;
}

.c4 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c4 h2 {
  margin: 1.5rem 0 1rem;
}

.c4 h3,
.c4 p {
  margin: 1rem 0;
}

.c4 h1 + h2 {
  margin-top: -0.75rem;
}

.c4 h1 + p,
.c4 h2 + p,
.c4 h3 + p {
  margin-top: -0.75rem;
}

.c4 > :first-child {
  margin-top: 0;
}

.c4 > :last-child {
  margin-bottom: 0;
}

.c7 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c6 {
  text-align: center;
  font-size: 0.8rem;
}

.c2 {
  margin: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  padding: 1rem;
}

@media print {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c3 {
    max-width: 100%;
    margin: 0;
  }
}

@media (min-width:480px) {
  .c4 {
    line-height: 1.3;
  }
}

<div>
  <div
    class="c0"
  >
    <main
      class="c1"
    >
      <label
        class="c2"
        data-testid="dropzone"
        for="election-file-upload"
        tabindex="0"
      >
        <div
          class="c3"
        >
          <input
            accept="application/json"
            autocomplete="off"
            data-testid="file-input"
            id="election-file-upload"
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <div
            class="c4"
          >
            <h1>
              Configure Ballot Marking Device
            </h1>
            <p>
              Drag and drop 
              <code>
                election.json
              </code>
               file here, or click to browse for file.
            </p>
            
          </div>
        </div>
      </label>
    </main>
    <footer
      class="c5"
    >
      <div
        class="c4"
      >
        <p
          class="c6"
        >
          <a
            href="/data/election.json"
          >
            Download sample 
            <code>
              election.json
            </code>
             file
          </a>
           
          to upload, or
           
          <button
            class="c7"
            type="button"
          >
            Load Sample Election File
          </button>
        </p>
      </div>
    </footer>
  </div>
</div>
`;

exports[`end to end: election can be uploaded, voter can vote and print 2`] = `
<div>
  .c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 1rem 0.5rem 2rem;
}

.c2 {
  width: 100%;
  max-width: 35rem;
  margin: auto auto;
}

.c4 {
  line-height: 1.2;
  max-width: 66ch;
  text-align: center;
  margin: auto;
}

.c4 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c4 h2 {
  margin: 1.5rem 0 1rem;
}

.c4 h3,
.c4 p {
  margin: 1rem 0;
}

.c4 h1 + h2 {
  margin-top: -0.75rem;
}

.c4 h1 + p,
.c4 h2 + p,
.c4 h3 + p {
  margin-top: -0.75rem;
}

.c4 > :first-child {
  margin-top: 0;
}

.c4 > :last-child {
  margin-bottom: 0;
}

.c3 {
  margin: auto;
}

.c5 {
  max-width: 320px;
  margin: auto;
}

@media (min-width:480px) {
  .c1 {
    padding: 2rem 1rem;
  }
}

@media print {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c2 {
    max-width: 100%;
    margin: 0;
  }
}

@media (min-width:480px) {
  .c4 {
    line-height: 1.3;
  }
}

<div
    class="c0"
  >
    <main
      class="c1"
    >
      <div
        class="c2"
      >
        <form>
          <fieldset>
            <legend
              class="c3"
            >
              <label
                for="BallotCode"
              >
                <div
                  class="c4"
                >
                  <h1>
                    Scan Your Activation Code
                  </h1>
                  <p>
                    Your ballot will be displayed after scan is complete.
                  </p>
                  <div
                    class="c5"
                  >
                    <svg
                      viewBox="0 0 1160 1160"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h1160v1160H0z"
                        fill="#FFF"
                      />
                      <path
                        d="M400 80h40v40h-40zM480 80h40v40h-40zM520 80h40v40h-40zM600 80h40v40h-40zM680 80h40v40h-40zM720 80h40v40h-40zM520 120h40v40h-40zM640 120h40v40h-40zM720 120h40v40h-40zM480 160h40v40h-40zM400 200h40v40h-40zM440 200h40v40h-40zM480 200h40v40h-40zM600 200h40v40h-40zM640 200h40v40h-40zM720 200h40v40h-40zM400 240h40v40h-40zM440 240h40v40h-40zM560 240h40v40h-40zM600 240h40v40h-40zM640 240h40v40h-40zM680 240h40v40h-40zM720 240h40v40h-40zM400 280h40v40h-40zM600 280h40v40h-40zM720 280h40v40h-40zM400 320h40v40h-40zM480 320h40v40h-40zM560 320h40v40h-40zM640 320h40v40h-40zM720 320h40v40h-40zM400 360h40v40h-40zM520 360h40v40h-40zM80 400h40v40H80zM240 400h40v40h-40zM320 400h40v40h-40zM360 400h40v40h-40zM400 400h40v40h-40zM480 400h40v40h-40zM520 400h40v40h-40zM600 400h40v40h-40zM640 400h40v40h-40zM720 400h40v40h-40zM760 400h40v40h-40zM800 400h40v40h-40zM840 400h40v40h-40zM880 400h40v40h-40zM920 400h40v40h-40zM1040 400h40v40h-40zM120 440h40v40h-40zM200 440h40v40h-40zM240 440h40v40h-40zM280 440h40v40h-40zM360 440h40v40h-40zM400 440h40v40h-40zM520 440h40v40h-40zM640 440h40v40h-40zM680 440h40v40h-40zM720 440h40v40h-40zM800 440h40v40h-40zM880 440h40v40h-40zM920 440h40v40h-40zM1000 440h40v40h-40zM1040 440h40v40h-40zM80 480h40v40H80zM160 480h40v40h-40zM200 480h40v40h-40zM320 480h40v40h-40zM400 480h40v40h-40zM480 480h40v40h-40zM520 480h40v40h-40zM560 480h40v40h-40zM600 480h40v40h-40zM640 480h40v40h-40zM680 480h40v40h-40zM800 480h40v40h-40zM840 480h40v40h-40zM880 480h40v40h-40zM920 480h40v40h-40zM80 520h40v40H80zM200 520h40v40h-40zM360 520h40v40h-40zM400 520h40v40h-40zM480 520h40v40h-40zM560 520h40v40h-40zM600 520h40v40h-40zM720 520h40v40h-40zM960 520h40v40h-40zM80 560h40v40H80zM120 560h40v40h-40zM160 560h40v40h-40zM200 560h40v40h-40zM240 560h40v40h-40zM320 560h40v40h-40zM400 560h40v40h-40zM440 560h40v40h-40zM480 560h40v40h-40zM520 560h40v40h-40zM560 560h40v40h-40zM600 560h40v40h-40zM720 560h40v40h-40zM760 560h40v40h-40zM800 560h40v40h-40zM960 560h40v40h-40zM80 600h40v40H80zM120 600h40v40h-40zM160 600h40v40h-40zM200 600h40v40h-40zM280 600h40v40h-40zM440 600h40v40h-40zM600 600h40v40h-40zM640 600h40v40h-40zM680 600h40v40h-40zM720 600h40v40h-40zM760 600h40v40h-40zM880 600h40v40h-40zM920 600h40v40h-40zM960 600h40v40h-40zM1000 600h40v40h-40zM200 640h40v40h-40zM320 640h40v40h-40zM360 640h40v40h-40zM680 640h40v40h-40zM760 640h40v40h-40zM800 640h40v40h-40zM840 640h40v40h-40zM160 680h40v40h-40zM200 680h40v40h-40zM440 680h40v40h-40zM480 680h40v40h-40zM560 680h40v40h-40zM640 680h40v40h-40zM720 680h40v40h-40zM880 680h40v40h-40zM960 680h40v40h-40zM80 720h40v40H80zM120 720h40v40h-40zM200 720h40v40h-40zM280 720h40v40h-40zM320 720h40v40h-40zM360 720h40v40h-40zM400 720h40v40h-40zM440 720h40v40h-40zM520 720h40v40h-40zM600 720h40v40h-40zM640 720h40v40h-40zM720 720h40v40h-40zM760 720h40v40h-40zM800 720h40v40h-40zM840 720h40v40h-40zM880 720h40v40h-40zM960 720h40v40h-40zM1000 720h40v40h-40zM400 760h40v40h-40zM440 760h40v40h-40zM560 760h40v40h-40zM680 760h40v40h-40zM720 760h40v40h-40zM880 760h40v40h-40zM960 760h40v40h-40zM1040 760h40v40h-40zM400 800h40v40h-40zM440 800h40v40h-40zM480 800h40v40h-40zM520 800h40v40h-40zM560 800h40v40h-40zM600 800h40v40h-40zM640 800h40v40h-40zM720 800h40v40h-40zM800 800h40v40h-40zM880 800h40v40h-40zM960 800h40v40h-40zM480 840h40v40h-40zM520 840h40v40h-40zM600 840h40v40h-40zM720 840h40v40h-40zM880 840h40v40h-40zM960 840h40v40h-40zM1040 840h40v40h-40zM400 880h40v40h-40zM440 880h40v40h-40zM480 880h40v40h-40zM560 880h40v40h-40zM600 880h40v40h-40zM720 880h40v40h-40zM760 880h40v40h-40zM800 880h40v40h-40zM840 880h40v40h-40zM880 880h40v40h-40zM960 880h40v40h-40zM1040 880h40v40h-40zM480 920h40v40h-40zM600 920h40v40h-40zM640 920h40v40h-40zM680 920h40v40h-40zM760 920h40v40h-40zM800 920h40v40h-40zM840 920h40v40h-40zM880 920h40v40h-40zM1000 920h40v40h-40zM1040 920h40v40h-40zM480 960h40v40h-40zM680 960h40v40h-40zM720 960h40v40h-40zM840 960h40v40h-40zM1000 960h40v40h-40zM440 1000h40v40h-40zM480 1000h40v40h-40zM560 1000h40v40h-40zM640 1000h40v40h-40zM680 1000h40v40h-40zM760 1000h40v40h-40zM840 1000h40v40h-40zM960 1000h40v40h-40zM1000 1000h40v40h-40zM400 1040h40v40h-40zM520 1040h40v40h-40zM600 1040h40v40h-40zM640 1040h40v40h-40zM680 1040h40v40h-40zM800 1040h40v40h-40zM880 1040h40v40h-40zM960 1040h40v40h-40zM1000 1040h40v40h-40zM1040 1040h40v40h-40z"
                      />
                      <path
                        d="M122 122h196v196H122z"
                        fill="none"
                      />
                      <path
                        d="M318 80H80v280h280V80h-42zm0 238H122V122h196v196z"
                      />
                      <path
                        d="M842 122h196v196H842z"
                        fill="none"
                      />
                      <path
                        d="M1038 80H800v280h280V80h-42zm0 238H842V122h196v196z"
                      />
                      <path
                        d="M122 842h196v196H122z"
                        fill="none"
                      />
                      <path
                        d="M318 800H80v280h280V800h-42zm0 238H122V842h196v196z"
                      />
                      <g>
                        <path
                          d="M160 160h120v120H160z"
                        />
                      </g>
                      <g>
                        <path
                          d="M880 160h120v120H880z"
                        />
                      </g>
                      <g>
                        <path
                          d="M160 880h120v120H160z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </label>
            </legend>
            <input
              class="visually-hidden"
              data-testid="activation-code"
              id="BallotCode"
              type="text"
              value=""
            />
            <button
              class="visually-hidden"
              type="submit"
            >
              Submit
            </button>
          </fieldset>
        </form>
      </div>
    </main>
  </div>
</div>
`;

exports[`end to end: election can be uploaded, voter can vote and print 3`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 1rem 0.5rem 2rem;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: auto auto;
}

.c3 {
  line-height: 1.2;
  max-width: 66ch;
  text-align: center;
  margin: auto;
}

.c3 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c3 h2 {
  margin: 1.5rem 0 1rem;
}

.c3 h3,
.c3 p {
  margin: 1rem 0;
}

.c3 h1 + h2 {
  margin-top: -0.75rem;
}

.c3 h1 + p,
.c3 h2 + p,
.c3 h3 + p {
  margin-top: -0.75rem;
}

.c3 > :first-child {
  margin-top: 0;
}

.c3 > :last-child {
  margin-bottom: 0;
}

.c4 {
  box-sizing: border-box;
  cursor: pointer;
  background: #4caf50;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: white;
  line-height: 1;
  white-space: nowrap;
}

.c2 {
  max-width: 320px;
  margin: auto;
}

@media (min-width:480px) {
  .c0 {
    padding: 2rem 1rem;
  }
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c1 {
    max-width: 100%;
    margin: 0;
  }
}

@media (min-width:480px) {
  .c3 {
    line-height: 1.3;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <svg
          viewBox="0 0 500 500"
          xmlns="http://www.w3.org/2000/svg"
        >
          
  
          <circle
            cx="250"
            cy="250"
            fill="#fff"
            r="240"
            stroke="#000"
            stroke-width="10"
          />
          
  
          <text
            alignment-baseline="middle"
            style="font-family: sans-serif; font-size: 180%"
            text-anchor="middle"
            x="50%"
            y="50%"
          >
            Official Seal Here
          </text>
          

        </svg>
        

      </div>
      <div
        class="c3"
      >
        <h1>
          2020 General Election
        </h1>
        <p>
          Tuesday, November 6, 2020
          <br />
          Nearby County
          , 
          State of Somewhere
        </p>
        <p>
          <button
            class="c4"
            type="button"
          >
            Get Started
          </button>
        </p>
      </div>
    </div>
  </main>
</div>
`;

exports[`end to end: election can be uploaded, voter can vote and print 4`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 1rem 0.5rem 2rem;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
}

.c4 {
  line-height: 1.2;
  max-width: 66ch;
}

.c4 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c4 h2 {
  margin: 1.5rem 0 1rem;
}

.c4 h3,
.c4 p {
  margin: 1rem 0;
}

.c4 h1 + h2 {
  margin-top: -0.75rem;
}

.c4 h1 + p,
.c4 h2 + p,
.c4 h3 + p {
  margin-top: -0.75rem;
}

.c4 > :first-child {
  margin-top: 0;
}

.c4 > :last-child {
  margin-bottom: 0;
}

.c3 {
  font-weight: 600;
  text-transform: uppercase;
}

.c2 {
  margin: 0 0.25rem 1rem;
}

.c5 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c6:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c6:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c6 > div {
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c7 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c0 {
    padding: 2rem 1rem;
  }
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c1 {
    max-width: 100%;
    margin: 0;
  }
}

@media (min-width:480px) {
  .c4 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c2 {
    margin: 0 1rem 1rem;
    margin-left: 4rem;
  }
}

@media (min-width:480px) {
  .c6 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class=""
      >
        <legend
          class="c2"
        >
          <small
            class="c3"
          >
            Federal Election
          </small>
          <div
            class="c4"
          >
            <h1>
              President
            </h1>
            <p>
              <strong>
                Vote for 1.
              </strong>
               You have selected
               
              0
              .
            </p>
          </div>
        </legend>
        <div
          class="c5"
        >
          <label
            class="c6"
            for="Minnie Mouse"
          >
            <input
              class="visually-hidden c7"
              id="Minnie Mouse"
              name="president"
              type="checkbox"
              value="Minnie Mouse"
            />
            <div
              class="c4"
            >
              <strong>
                Minnie Mouse
              </strong>
              <br />
              Mouse
            </div>
          </label>
          <label
            class="c6"
            for="Mickey Mouse"
          >
            <input
              class="visually-hidden c7"
              id="Mickey Mouse"
              name="president"
              type="checkbox"
              value="Mickey Mouse"
            />
            <div
              class="c4"
            >
              <strong>
                Mickey Mouse
              </strong>
              <br />
              Mouse
            </div>
          </label>
          <label
            class="c6"
            for="Donald Duck"
          >
            <input
              class="visually-hidden c7"
              id="Donald Duck"
              name="president"
              type="checkbox"
              value="Donald Duck"
            />
            <div
              class="c4"
            >
              <strong>
                Donald Duck
              </strong>
              <br />
              Duck
            </div>
          </label>
          <label
            class="c6"
            for="writeInCandidate"
          >
            <input
              class="visually-hidden c7"
              id="writeInCandidate"
              name="president"
              type="checkbox"
              value="writeInCandidate"
            />
            <div
              class="c4"
            >
              <em>
                add a write-in candidate
              </em>
            </div>
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > *:first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c2 {
  color: white;
  text-align: center;
}

@media (min-width:480px) {
  .c0 > *:only-child {
    margin: auto;
    max-width: 30%;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media print {
  .c2 {
    color: white;
  }
}

<nav
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      Next
    </button>
    <button
      class="c1"
      type="button"
    >
      Previous
    </button>
    <p
      class="c2"
    >
      1
       of 
      2
    </p>
  </nav>
  .c0 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > *:first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

@media (min-width:480px) {
  .c0 > *:first-child {
    margin-left: auto;
  }
}

@media (min-width:480px) {
  .c0 > * {
    -webkit-flex: 0;
    -ms-flex: 0;
    flex: 0;
  }
}

@media (min-width:480px) {
  .c0 > *:only-child {
    margin: auto;
    max-width: 30%;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      Review
    </button>
    <button
      class="c1"
      type="button"
    >
      Help
    </button>
    <button
      class="c1"
      type="button"
    >
      Settings
    </button>
  </nav>
</div>
`;

exports[`end to end: election can be uploaded, voter can vote and print 5`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  <main
    class="sc-bwzfXH fWvEbs"
  >
    <div
      class="sc-htpNat dyLKlQ"
    >
      <fieldset
        class="sc-gZMcBi giNnHm"
      >
        <legend
          class="sc-gqjmRU bvPTSf"
        >
          <small
            class="sc-iwsKbI jHnxZM"
          >
            Federal Election
          </small>
          <div
            class="sc-bxivhb gobFlP"
          >
            <h1>
              President
            </h1>
            <p>
              <strong>
                Vote for 1.
              </strong>
               You have selected
               
              1
              .
            </p>
          </div>
        </legend>
        <div
          class="sc-VigVT hvGAoq"
        >
          <label
            class="sc-jTzLTM biYKsK"
            for="Minnie Mouse"
          >
            <input
              class="visually-hidden sc-fjdhpX fvYzBM"
              id="Minnie Mouse"
              name="president"
              type="checkbox"
              value="Minnie Mouse"
            />
            <div
              class="sc-bxivhb gobFlP"
            >
              <strong>
                Minnie Mouse
              </strong>
              <br />
              Mouse
            </div>
          </label>
          <label
            class="sc-jTzLTM jKLUAm"
            for="Mickey Mouse"
          >
            <input
              class="visually-hidden sc-fjdhpX fvYzBM"
              disabled=""
              id="Mickey Mouse"
              name="president"
              type="checkbox"
              value="Mickey Mouse"
            />
            <div
              class="sc-bxivhb gobFlP"
            >
              <strong>
                Mickey Mouse
              </strong>
              <br />
              Mouse
            </div>
          </label>
          <label
            class="sc-jTzLTM jKLUAm"
            for="Donald Duck"
          >
            <input
              class="visually-hidden sc-fjdhpX fvYzBM"
              disabled=""
              id="Donald Duck"
              name="president"
              type="checkbox"
              value="Donald Duck"
            />
            <div
              class="sc-bxivhb gobFlP"
            >
              <strong>
                Donald Duck
              </strong>
              <br />
              Duck
            </div>
          </label>
          <label
            class="sc-jTzLTM jKLUAm"
            for="writeInCandidate"
          >
            <input
              class="visually-hidden sc-fjdhpX fvYzBM"
              disabled=""
              id="writeInCandidate"
              name="president"
              type="checkbox"
              value="writeInCandidate"
            />
            <div
              class="sc-bxivhb gobFlP"
            >
              <em>
                add a write-in candidate
              </em>
            </div>
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  <nav
    class="sc-bZQynM uuSXr"
  >
    <button
      class="sc-gzVnrw dwJMTd"
      type="button"
    >
      Next
    </button>
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Previous
    </button>
    <p
      class="sc-dnqmqq dhBiUn"
    >
      1
       of 
      2
    </p>
  </nav>
  <nav
    class="sc-bZQynM efZRTa"
  >
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Review
    </button>
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Help
    </button>
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Settings
    </button>
  </nav>
</div>
`;

exports[`end to end: election can be uploaded, voter can vote and print 6`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  <main
    class="sc-bwzfXH fWvEbs"
  >
    <div
      class="sc-htpNat dyLKlQ"
    >
      .c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  margin: 0 0.25rem 1rem;
}

.c3 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c4:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c4:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c4 > div {
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c5 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c0 {
    margin: 0 1rem 1rem;
    margin-left: 4rem;
  }
}

@media (min-width:480px) {
  .c4 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<fieldset
        class=""
      >
        <legend
          class="c0"
        >
          <small
            class="c1"
          >
            Federal Election
          </small>
          <div
            class="c2"
          >
            <h1>
              Senator
            </h1>
            <p>
              <strong>
                Vote for 1.
              </strong>
               You have selected
               
              0
              .
            </p>
          </div>
        </legend>
        <div
          class="c3"
        >
          <label
            class="c4"
            for="Chad Hanging"
          >
            <input
              class="visually-hidden c5"
              id="Chad Hanging"
              name="senator"
              type="checkbox"
              value="Chad Hanging"
            />
            <div
              class="c2"
            >
              <strong>
                Chad Hanging
              </strong>
              <br />
              Independent
            </div>
          </label>
          <label
            class="c4"
            for="Lev Ermachine"
          >
            <input
              class="visually-hidden c5"
              id="Lev Ermachine"
              name="senator"
              type="checkbox"
              value="Lev Ermachine"
            />
            <div
              class="c2"
            >
              <strong>
                Lev Ermachine
              </strong>
              <br />
              Independent
            </div>
          </label>
          <label
            class="c4"
            for="John Smith"
          >
            <input
              class="visually-hidden c5"
              id="John Smith"
              name="senator"
              type="checkbox"
              value="John Smith"
            />
            <div
              class="c2"
            >
              <strong>
                John Smith
              </strong>
              <br />
              Independent
            </div>
          </label>
          <label
            class="c4"
            for="writeInCandidate"
          >
            <input
              class="visually-hidden c5"
              id="writeInCandidate"
              name="senator"
              type="checkbox"
              value="writeInCandidate"
            />
            <div
              class="c2"
            >
              <em>
                add a write-in candidate
              </em>
            </div>
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  <nav
    class="sc-bZQynM uuSXr"
  >
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Review
    </button>
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Previous
    </button>
    <p
      class="sc-dnqmqq dhBiUn"
    >
      2
       of 
      2
    </p>
  </nav>
  <nav
    class="sc-bZQynM efZRTa"
  >
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Review
    </button>
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Help
    </button>
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Settings
    </button>
  </nav>
</div>
`;

exports[`end to end: election can be uploaded, voter can vote and print 7`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  <main
    class="sc-bwzfXH fWvEbs"
  >
    <div
      class="sc-htpNat dyLKlQ"
    >
      <fieldset
        class="sc-gZMcBi giNnHm"
      >
        <legend
          class="sc-gqjmRU bvPTSf"
        >
          <small
            class="sc-iwsKbI jHnxZM"
          >
            Federal Election
          </small>
          <div
            class="sc-bxivhb gobFlP"
          >
            <h1>
              Senator
            </h1>
            <p>
              <strong>
                Vote for 1.
              </strong>
               You have selected
               
              1
              .
            </p>
          </div>
        </legend>
        <div
          class="sc-VigVT hvGAoq"
        >
          <label
            class="sc-jTzLTM jKLUAm"
            for="Chad Hanging"
          >
            <input
              class="visually-hidden sc-fjdhpX fvYzBM"
              disabled=""
              id="Chad Hanging"
              name="senator"
              type="checkbox"
              value="Chad Hanging"
            />
            <div
              class="sc-bxivhb gobFlP"
            >
              <strong>
                Chad Hanging
              </strong>
              <br />
              Independent
            </div>
          </label>
          <label
            class="sc-jTzLTM jKLUAm"
            for="Lev Ermachine"
          >
            <input
              class="visually-hidden sc-fjdhpX fvYzBM"
              disabled=""
              id="Lev Ermachine"
              name="senator"
              type="checkbox"
              value="Lev Ermachine"
            />
            <div
              class="sc-bxivhb gobFlP"
            >
              <strong>
                Lev Ermachine
              </strong>
              <br />
              Independent
            </div>
          </label>
          <label
            class="sc-jTzLTM biYKsK"
            for="John Smith"
          >
            <input
              autofocus=""
              class="visually-hidden sc-fjdhpX fvYzBM"
              id="John Smith"
              name="senator"
              type="checkbox"
              value="John Smith"
            />
            <div
              class="sc-bxivhb gobFlP"
            >
              <strong>
                John Smith
              </strong>
              <br />
              Independent
            </div>
          </label>
          <label
            class="sc-jTzLTM jKLUAm"
            for="writeInCandidate"
          >
            <input
              class="visually-hidden sc-fjdhpX fvYzBM"
              disabled=""
              id="writeInCandidate"
              name="senator"
              type="checkbox"
              value="writeInCandidate"
            />
            <div
              class="sc-bxivhb gobFlP"
            >
              <em>
                add a write-in candidate
              </em>
            </div>
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  <nav
    class="sc-bZQynM uuSXr"
  >
    <button
      class="sc-gzVnrw dwJMTd"
      type="button"
    >
      Review
    </button>
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Previous
    </button>
    <p
      class="sc-dnqmqq dhBiUn"
    >
      2
       of 
      2
    </p>
  </nav>
  <nav
    class="sc-bZQynM efZRTa"
  >
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Review
    </button>
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Help
    </button>
    <button
      class="sc-gzVnrw Gbhle"
      type="button"
    >
      Settings
    </button>
  </nav>
</div>
`;

exports[`end to end: election can be uploaded, voter can vote and print 8`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 1rem 0.5rem 2rem;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
}

.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c9 {
  box-sizing: border-box;
  cursor: pointer;
  margin: -0.5rem 0;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1rem;
  padding: 1rem 0.5rem;
  background: white;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c4 > .seal {
  width: 150px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin: 0 auto 0.5rem;
}

.c4 h2 {
  margin-bottom: 0;
}

.c4 h3 {
  margin-top: 0;
}

.c4 > .ballot-header-content {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  margin: 1rem 0 -0.75rem;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  width: 100%;
  max-width: 66ch;
  text-align: left;
  border-bottom: 1px solid lightGrey;
}

.c7 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  border-top: none;
  font-weight: normal;
  line-height: 1.2;
  vertical-align: top;
}

.c8 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  border-top: 1px solid lightGrey;
  font-weight: normal;
  line-height: 1.2;
  vertical-align: top;
}

@media (min-width:480px) {
  .c0 {
    padding: 2rem 1rem;
  }
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c1 {
    max-width: 100%;
    margin: 0;
  }
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:640px),print {
  .c3 {
    margin-top: 2rem;
    padding: 2rem;
  }
}

@media print {
  .c3 {
    min-height: 11in;
    margin: 0;
    padding: 0.5in;
    font-size: 16px;
  }
}

@media (min-width:640px),print {
  .c4 {
    text-align: left;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:640px),print {
  .c4 > .seal {
    width: 175px;
    margin: 0;
  }
}

@media print {
  .c4 > .seal {
    width: 1.5in;
    margin: 0;
  }
}

@media (min-width:640px),print {
  .c4 > .ballot-header-content {
    margin-left: 1rem;
  }
}

@media (min-width:640px),print {
  .c4 > .ballot-header-content {
    max-width: 100%;
  }
}

@media (min-width:480px),print {
  .c10 {
    width: 50%;
  }
}

@media print {
  .c6 {
    max-width: 100%;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h1
          class="no-print"
        >
          Review Your Selections
        </h1>
        <p
          class="no-print"
        >
          Confirm your votes by printing your ballot.
        </p>
      </div>
      <section
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="seal"
          >
            <svg
              viewBox="0 0 500 500"
              xmlns="http://www.w3.org/2000/svg"
            >
              
  
              <circle
                cx="250"
                cy="250"
                fill="#fff"
                r="240"
                stroke="#000"
                stroke-width="10"
              />
              
  
              <text
                alignment-baseline="middle"
                style="font-family: sans-serif; font-size: 180%"
                text-anchor="middle"
                x="50%"
                y="50%"
              >
                Official Seal Here
              </text>
              

            </svg>
            

          </div>
          <div
            class="ballot-header-content c2"
          >
            <h2>
              Official Ballot
            </h2>
            <h3>
              2020 General Election
            </h3>
            <p>
              Nearby County
              , 
              State of Somewhere
              <br />
              Tuesday, November 6, 2020
            </p>
          </div>
        </div>
        <div
          class="c5"
        >
          <table
            class="c6"
          >
            <caption
              class="no-print visually-hidden"
            >
              <p>
                Summary of your votes.
              </p>
            </caption>
            <thead>
              <tr>
                <th
                  class="c7"
                  scope="col"
                >
                  Contest
                </th>
                <th
                  class="c7"
                  scope="col"
                >
                  Vote
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <th
                  class="c8"
                >
                  President
                   
                </th>
                <td
                  class="c8"
                >
                  <strong>
                    Minnie Mouse
                  </strong>
                   
                  <button
                    class="no-print c9"
                    type="button"
                  >
                    Change
                  </button>
                </td>
              </tr>
              <tr>
                <th
                  class="c8"
                >
                  Senator
                   
                </th>
                <td
                  class="c8"
                >
                  <strong>
                    John Smith
                  </strong>
                   
                  <button
                    class="no-print c9"
                    type="button"
                  >
                    Change
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="c10"
        >
          <svg
            viewBox="0 0 1293 177"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h1293v177H0z"
              fill="#FFF"
            />
            <path
              d="M0 0h6v150H0zM9 0h3v150H9zM18 0h3v150h-3zM33 0h6v150h-6zM45 0h3v150h-3zM54 0h9v150h-9zM66 0h3v150h-3zM75 0h9v150h-9zM87 0h6v150h-6zM99 0h3v150h-3zM108 0h3v150h-3zM123 0h6v150h-6zM132 0h3v150h-3zM141 0h3v150h-3zM156 0h6v150h-6zM165 0h9v150h-9zM177 0h6v150h-6zM186 0h9v150h-9zM198 0h3v150h-3zM213 0h3v150h-3zM222 0h6v150h-6zM231 0h9v150h-9zM246 0h3v150h-3zM252 0h6v150h-6zM264 0h3v150h-3zM279 0h3v150h-3zM285 0h6v150h-6zM297 0h3v150h-3zM306 0h6v150h-6zM315 0h9v150h-9zM330 0h3v150h-3zM336 0h9v150h-9zM348 0h12v150h-12zM363 0h6v150h-6zM372 0h12v150h-12zM387 0h6v150h-6zM396 0h6v150h-6zM405 0h3v150h-3zM417 0h9v150h-9zM429 0h3v150h-3zM435 0h12v150h-12zM450 0h9v150h-9zM462 0h3v150h-3zM471 0h6v150h-6zM480 0h9v150h-9zM495 0h3v150h-3zM501 0h9v150h-9zM513 0h12v150h-12zM528 0h9v150h-9zM540 0h9v150h-9zM552 0h6v150h-6zM561 0h3v150h-3zM576 0h6v150h-6zM585 0h3v150h-3zM594 0h3v150h-3zM600 0h12v150h-12zM615 0h9v150h-9zM627 0h3v150h-3zM636 0h6v150h-6zM645 0h9v150h-9zM660 0h3v150h-3zM669 0h3v150h-3zM675 0h6v150h-6zM693 0h3v150h-3zM699 0h6v150h-6zM717 0h3v150h-3zM726 0h6v150h-6zM735 0h9v150h-9zM750 0h3v150h-3zM759 0h3v150h-3zM765 0h6v150h-6zM777 0h3v150h-3zM792 0h3v150h-3zM801 0h6v150h-6zM810 0h9v150h-9zM825 0h6v150h-6zM834 0h9v150h-9zM849 0h3v150h-3zM858 0h3v150h-3zM864 0h6v150h-6zM876 0h3v150h-3zM891 0h6v150h-6zM903 0h9v150h-9zM915 0h3v150h-3zM924 0h6v150h-6zM936 0h9v150h-9zM948 0h3v150h-3zM957 0h3v150h-3zM963 0h6v150h-6zM981 0h3v150h-3zM990 0h3v150h-3zM999 0h9v150h-9zM1011 0h6v150h-6zM1023 0h3v150h-3zM1032 0h3v150h-3zM1047 0h6v150h-6zM1056 0h3v150h-3zM1065 0h3v150h-3zM1080 0h6v150h-6zM1089 0h3v150h-3zM1104 0h3v150h-3zM1110 0h6v150h-6zM1122 0h9v150h-9zM1134 0h6v150h-6zM1143 0h9v150h-9zM1155 0h6v150h-6zM1167 0h3v150h-3zM1173 0h9v150h-9zM1188 0h3v150h-3zM1194 0h6v150h-6zM1206 0h3v150h-3zM1221 0h3v150h-3zM1227 0h6v150h-6zM1245 0h3v150h-3zM1254 0h6v150h-6zM1269 0h9v150h-9zM1281 0h3v150h-3zM1287 0h6v150h-6z"
            />
            <text
              font-family="Helvetica"
              font-size="24"
              text-anchor="middle"
              x="646.5"
              y="177"
            >
              40bb7d9c-9049-4873-af5e-5e66f0bbc73e
            </text>
          </svg>
        </div>
      </section>
    </div>
  </main>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > *:first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: #4caf50;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: white;
  line-height: 1;
  white-space: nowrap;
}

@media (min-width:480px) {
  .c0 > *:first-child {
    margin-left: auto;
  }
}

@media (min-width:480px) {
  .c0 > * {
    -webkit-flex: 0;
    -ms-flex: 0;
    flex: 0;
  }
}

@media (min-width:480px) {
  .c0 > *:only-child {
    margin: auto;
    max-width: 30%;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      Print Ballot
    </button>
    <button
      class="c2"
      type="button"
    >
      Back
    </button>
  </nav>
</div>
`;
